--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,9 +3,18 @@
     bottom: 10px;
 }
 .clientes{
-   position: relative;
-   left: 100px;
+    position: relative;
+    left: 100px;
 }
 .qtdPedido{
     width: 100px;
+}
+th{
+    text-align: center;
+}
+#carousel{
+    background-color: #d2322d;
+}
+div.col-center {
+    text-align: center;
 }
